--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.11.0</version>
 		</dependency>
-
+		<dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>5.2.0</version>
+    </dependency>
 	</dependencies>
 
 	<build>
